# margi

./: .gitignore  AGENTS.md  Cargo.toml  README.md  dist-workspace.toml
.margi/: README.md  config.json  env.md  memory.md  module-plan.md
.margi/modules/src/: STATUS  api.md  internals.md  notes.md
.margi/modules/src/memory/: STATUS  api.md  internals.md  notes.md
.margi/modules/src/module/: STATUS  api.md  internals.md  notes.md
.margi/modules/src/search/: STATUS  api.md  internals.md  notes.md
docs/: architecture.md
hooks/: post-commit
src/: cli.rs  config.rs  diff.rs  error.rs  i18n.rs  init.rs  main.rs  paths.rs  prompts.rs  ui.rs
src/memory/: correct.rs  mod.rs  note.rs
src/module/: analyzer.rs  mod.rs  planner.rs  status.rs
src/search/: chunker.rs  embed.rs  indexer.rs  mod.rs  searcher.rs
wix/: main.wxs
